New post about Java Puppet provisioning

--- a/source/_includes/asides/top_category_list.html
+++ b/source/_includes/asides/top_category_list.html
@@ -1,4 +1,6 @@
-<section>
-  <h1>Top Categories</h1>
-    <ul id="top-category-list">{% top_category_list counter:true %}</ul>
+<section class="well">
+	<ul id="top-categoty-list" class="nav nav-list">
+				<li class="nav-header">Top Categories</li>
+				<ul>{% top_category_list counter:true %}</ul>
+	</ul>
 </section>
